--- a/HomeWork20/Views/Shared/_Layout.cshtml
+++ b/HomeWork20/Views/Shared/_Layout.cshtml
@@ -5,22 +5,18 @@
   <link rel="stylesheet" href="/css/AllViewcss.css"/>
   <link rel="stylesheet" href="/css/PersoneViewcss.css"/>
   <link rel="stylesheet" href="/css/PersoneAdd.css"/>
+  <link rel="stylesheet" href="/css/Denied.css"/>
   <title>Phone book</title>
 </head>
 <body>
     <header class="header">
-       <nav class="nav-links">
-          <img class="img-logo" src="~/img/logo.jpg" alt="logo"/>
-          <ul class="menu-links">
-            <li>
-                <a href="/Persone/Index">Home</a>
-            </li>
-            <li>
-                <a href="/Persone/PersoneAdd">Add</a>
-            </li>
-          </ul>         
-      </nav>
-    </header>
+  <a href="/Persone/Index">
+    <img class="logo" src="~/img/logo.jpg" alt="logo" />
+  </a>
+  <nav class="nav-links">
+    @await Component.InvokeAsync("AnonOrAuth")
+  </nav>
+</header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
