--- a/HomeWork20/Views/Persone/PersoneEdit.cshtml
+++ b/HomeWork20/Views/Persone/PersoneEdit.cshtml
@@ -1,34 +1,38 @@
-﻿<!DOCTYPE html>
+﻿@model HomeWork20.Models.Persone
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
 </head>
 
 <body>
-  <form class="persone-form" method="put" action="/api/ApiPersone/EditPersone/@ViewBag.Persone.Id">
+  <form class="persone-form" method="put" action="/api/ApiPersone/EditPersone/@Model.Id">
+    <p>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    </p>
     <p>
         <label>Surname</label>
-        <input type="text" name="SurName" id="SurName" value="@ViewBag.Persone.SurName"/>
+        <input asp-for="SurName" value="@Model.SurName" required/>
     </p>
     <p>
         <label>Name</label>
-        <input type="text" name="Name" id="Name" value="@ViewBag.Persone.Name"/>
+        <input asp-for="Name" value="@Model.Name" required/>
     </p>
     <p>
         <label>FatherName</label>
-        <input type="text" name="FatherName" id="FatherName" value="@ViewBag.Persone.FatherName"/>
+        <input asp-for="FatherName" value="@Model.FatherName" required/>
     </p>
     <p>
         <label>Phone</label>
-        <input type="text" name="Telephone" id="Telephone" value="@ViewBag.Persone.Telephone"/>
+        <input asp-for="Telephone" value="@Model.Telephone" required/>
     </p>
     <p>
          <label>Address</label>
-        <input type="text" name="Address" id="Address" value="@ViewBag.Persone.Address"/>
+        <input asp-for="Address" value="@Model.Address" required/>
     </p>
     <p>
         <label>Description</label>
-        <input type="text" name="Description" id="Description" value="@ViewBag.Persone.Description"/>
+        <input asp-for="Description" value="@Model.Description" required/>
     </p>
 
         <button type="submit">Save</button>
